코스트 구현
화면 왼쪽에 5/5 코스트 텍스트 만들어놓음. 5 이하 이면 1초당 1씩 충전

카드 사용하면 코스트 1씩 감소
코스트가 0 이면 카드 선택만 되고 사용은 안됨.

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,10 @@ crashlytics-build.properties
 *.dwlt
 UserSettings/Layouts/CurrentMaximizeLayout.dwlt
 UserSettings/Layouts/default-2021.dwlt
+*.json
+*.dwlt
+*.asset
+ProjectSettings/ProjectSettings.asset
+ProjectSettings/QualitySettings.asset
+UserSettings/EditorUserSettings.asset
+UserSettings/Layouts/CurrentMaximizeLayout.dwlt
