--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@ crashlytics-build.properties
 **/[Aa]ssets/[Ss]treamingAssets/aa.meta
 **/[Aa]ssets/[Ss]treamingAssets/aa/*
 
+ProjectSettings/ProjectSettings.asset
+UserSettings/Layouts/CurrentMaximizeLayout.dwlt
